--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,72 +31,76 @@
             android:layout_marginTop="@dimen/x30"
             android:src="@drawable/lock_logo" />
 
-
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/x20"
-            android:background="@drawable/shape_edit_login"
-            android:padding="5dp">
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/wec" />
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/x20"-->
+            <!--android:background="@drawable/shape_edit_login"-->
+            <!--android:padding="5dp">-->
 
-            <ImageView
-                android:layout_width="@dimen/x20"
-                android:layout_height="@dimen/x20"
-                android:layout_gravity="center"
-                android:src="@drawable/user" />
+            <!--<ImageView-->
+                <!--android:layout_width="@dimen/x20"-->
+                <!--android:layout_height="@dimen/x20"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:src="@drawable/user" />-->
 
-            <com.nokelock.ui.CleanEditText
-                android:id="@+id/et_login_username"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@null"
-                android:hint="用户名"
-                android:padding="@dimen/x2"
-                android:textColorHint="@color/colorDarkGrey" />
-
-
-        </LinearLayout>
+            <!--<com.nokelock.ui.CleanEditText-->
+                <!--android:id="@+id/et_login_username"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:background="@null"-->
+                <!--android:hint="用户名"-->
+                <!--android:padding="@dimen/x2"-->
+                <!--android:textColorHint="@color/colorDarkGrey" />-->
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/x20"
-            android:background="@drawable/shape_edit_login"
-            android:padding="5dp">
+        <!--</LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
 
-                <ImageView
-                    android:layout_width="@dimen/x20"
-                    android:layout_height="@dimen/x20"
-                    android:layout_gravity="center"
-                    android:src="@drawable/password" />
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/x20"-->
+            <!--android:background="@drawable/shape_edit_login"-->
+            <!--android:padding="5dp">-->
 
-                <com.nokelock.ui.CleanEditText
-                    android:id="@+id/et_login_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@null"
-                    android:hint="密码"
-                    android:inputType="textPassword"
-                    android:padding="@dimen/x2"
-                    android:textColorHint="@color/colorDarkGrey" />
-            </LinearLayout>
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1">-->
 
-        </LinearLayout>
+                <!--<ImageView-->
+                    <!--android:layout_width="@dimen/x20"-->
+                    <!--android:layout_height="@dimen/x20"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:src="@drawable/password" />-->
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/selector_btn"
-            android:text="登录"
-            android:textColor="@color/colorWhite" />
+                <!--<com.nokelock.ui.CleanEditText-->
+                    <!--android:id="@+id/et_login_password"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:background="@null"-->
+                    <!--android:hint="密码"-->
+                    <!--android:inputType="textPassword"-->
+                    <!--android:padding="@dimen/x2"-->
+                    <!--android:textColorHint="@color/colorDarkGrey" />-->
+            <!--</LinearLayout>-->
+
+        <!--</LinearLayout>-->
+
+        <!--<Button-->
+            <!--android:id="@+id/btn_login"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:background="@drawable/selector_btn"-->
+            <!--android:text="登录"-->
+            <!--android:textColor="@color/colorWhite" />-->
 
     </LinearLayout>
 
