--- a/app/src/main/res/values-xxxhdpi/colors.xml
+++ b/app/src/main/res/values-xxxhdpi/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGreen">#7bff00</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorGrey">#dcd9d9</color>
+    <color name="colorGrey">#F3F1F1</color>
     <color name="colorDarkGrey">#b7b7b7</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#38cdff</color>
